<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="59dp"
        android:background="#fbff00"
        android:padding="8dp"
        android:text="@string/_30s"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="139dp"
        android:layout_height="59dp"
        android:layout_alignTop="@+id/timer"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mybutton"

        android:paddingLeft="25dp"
        android:paddingStart="25dp"
        android:paddingTop="10dp"
        android:text="@string/_2_3"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="79dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/timer"
        android:background="@drawable/mybutton"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="10dp"
        android:text="@string/_0"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingStart="10dp" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="301dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp"
        android:layout_alignParentLeft="true">

        <Button
            android:id="@+id/button"
            android:layout_width="178dp"
            android:layout_height="143dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/_25"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="211dp"
            android:layout_height="144dp"
            android:background="@drawable/buttonn"
            android:text="@string/_35"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button3"
            android:layout_width="179dp"
            android:layout_height="148dp"
            android:background="@drawable/buttonnn"
            android:text="@string/_29"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button4"
            android:layout_width="195dp"
            android:layout_height="150dp"
            android:background="#FF1
"
            android:text="@string/_39"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_row="1" />
    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="370dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dp"
        android:text="@string/namex"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingStart="10dp" />


</RelativeLayout>

