<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="307dp"
        android:layout_height="64dp"
        android:layout_marginBottom="375dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="94dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/brain_shaker"
        android:textColor="#FF098D"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:fontFamily="@font/architects_daughter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="400dp"
        android:text="@string/quiz_app"
        android:textColor="#F50B49"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/alegreya_sans_sc_thin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="214dp"
        android:layout_height="196dp"
        android:layout_marginEnd="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="41dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/braingraphic" />

</android.support.constraint.ConstraintLayout>